[gd_scene format=3 uid="uid://bnn04m70vruxa"]

[ext_resource type="Theme" uid="uid://bsa4ociwyndea" path="res://resources/themes/game_theme.tres" id="1_0ebjn"]
[ext_resource type="Texture2D" uid="uid://bin453q1vhsy8" path="res://assets/sprites/main_menu/orig.png" id="1_fsom3"]
[ext_resource type="Script" uid="uid://bqmxgn780j1ne" path="res://scenes/main_menu/main_menu.gd" id="2_uqeha"]
[ext_resource type="PackedScene" uid="uid://bqqubrlum3m1c" path="res://scenes/services/music_service.tscn" id="3_ob46e"]
[ext_resource type="Script" uid="uid://datlrsmxx1ofs" path="res://scripts/managers/music_manager.gd" id="4_wem23"]
[ext_resource type="Resource" uid="uid://dvdpn73hi36qn" path="res://resources/musics/main_menu_playlist.tres" id="6_3ovsr"]

[node name="MainMenu" type="Control" unique_id=1070189081]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0ebjn")
script = ExtResource("2_uqeha")

[node name="Background" type="TextureRect" parent="." unique_id=85381989]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fsom3")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1398467734]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -32.5
offset_right = 25.0
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 42

[node name="PlayButton" type="Button" parent="VBoxContainer" unique_id=1885076589]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Play"

[node name="CreditsButton" type="Button" parent="VBoxContainer" unique_id=1887158772]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Credits"

[node name="ExitButton" type="Button" parent="VBoxContainer" unique_id=1552846127]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Exit"

[node name="Musics" type="Node" parent="." unique_id=950536096]

[node name="MusicService" parent="Musics" unique_id=533384269 instance=ExtResource("3_ob46e")]

[node name="MusicManager" type="Node" parent="Musics" unique_id=2146704449]
script = ExtResource("4_wem23")
playlist = ExtResource("6_3ovsr")
